# kerti

./: .dockerignore  README.md  app.py  portfolio.yaml  pyproject.toml
docker/: Dockerfile
