[tool.poetry]
name = "kerti"
version = "0.1.0"
description = ""
authors = ["soeren berg <soeren.berg@protonmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
plotly-express = "^0.4.1"
plotly = "^5.0.0"
streamlit = "^0.83.0"
yfinance = "^0.1.59"
jupyter = "^1.0.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^3.9.2"
pylint = "^2.8.3"
neovim = "^0.3.1"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
